[build-system]
requires = ["flit_core ~= 3.4.0"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "configstore"
author = "Caravan Coop"
author-email = "hi@caravan.coop"
home-page = "https://github.com/caravancoop/configstore"
description-file = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
]
requires = [
]

[tool.flit.metadata.requires-extra]
# Note that django-dotenv does not actually use or need Django
dotenv = ["django-dotenv"]
awsssm = ["boto3"]
google_runtime_configurator = ["google-cloud-runtimeconfig"]
google_secret_manager = ["google-cloud-secret-manager"]

[tool.flit.metadata.urls]
Documentation = "https://github.com/caravancoop/configstore/blob/main/example.py"
Changelog = "https://github.com/caravancoop/configstore/blob/main/CHANGELOG.rst"
